--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 title: Hacker-Blog
 description: "A Jekyll Blog Theme For Hackers"
 author:
-  name: "SomeHacker"
-  email: "someone@somewebsite.somedomain"
-  url: "https://ashishchaudhary.in/hacker-blog"
+  name: "Biero-el-corridor"
+  email: ""
+  url: 
 
 baseurl: /
-url: "https://biero.github.io"
+url: "https://biero-el-corridor.github.io"
 source: .
 destination: ./_site
 permalink: /:title
@@ -28,5 +28,5 @@ plugins:
   - jekyll-sitemap
 
 # Custom variables
-owner : "SomeHacker"
-year : "2020"
+owner : "biero-el-corridor "
+year : "2022"
